[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
config = "0.14.0"
dotenv = "0.15.0"
serde = "1.0.203"
serde_json = "1.0.120"
tarpc = { version = "0.34.0", features = ["tokio1", "serde-transport","tcp"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] } 
tokio-serde = { version = "0.9", features = ["bincode"] }
